# NexusTrade

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  NexusTrade_Exchange_SRD.docx  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json
.github/workflows/: cd.yml  ci.yml
apps/frontend/: next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: exchange-shell.tsx  exchange-widgets.tsx
docs/: API.md
infra/docker/: node-service.Dockerfile  rust-matching.Dockerfile
infra/fluentd/: fluent.conf
infra/k8s/: nexustrade.yaml
infra/monitoring/: alert-rules.yml  alertmanager.yml  grafana-dashboard.json  grafana-dashboards.yml  grafana-datasource.yml  prometheus.yml
infra/terraform/: main.tf  variables.tf
scripts/: dev-all.mjs
services/api-gateway/: package.json
services/auth-service/: package.json
services/compliance-service/: package.json
services/deposit-service/: package.json
services/market-data-service/: package.json
services/matching-engine/: Cargo.toml  build.rs  package.json
services/matching-engine/proto/: matching.proto
services/matching-engine/src/: lib.rs  main.rs
services/notification-service/: package.json
services/risk-engine/: package.json
services/trading-service/: package.json
services/user-service/: package.json
services/wallet-service/: package.json
services/withdrawal-service/: package.json
tests/e2e/: frontend.spec.ts
(+60 files in other folders)
