# services/matching-engine/Cargo.toml
[package]
name = "nexus-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
